tests/ui/trait-bounds/issue-82038.stderr
error[E0277]: the trait bound `bool: Foo` is not satisfied
  --> $DIR/issue-82038.rs:8:6
   |
LL |     <bool as Foo>::my_method();
   |      ^^^^ the trait `Foo` is not implemented for `bool`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
